--- a/requirements_SDUEBA010.txt
+++ b/requirements_SDUEBA010.txt
@@ -1,10 +1,11 @@
 gensim==4.3.3
 matplotlib==3.10.0
-numpy==1.26.4
-pandas==2.2.2
-scipy==1.13.1
+numpy==1.24.4
+pandas==1.5.3
+scipy==1.10.1
 scikit-learn==1.6.1
 torch==2.6.0+cu124
 transformers==4.50.3
 ucimlrepo==0.0.7
 umap-learn==0.5.7
+# tspg is a GitHub repo, not PyPI
