--- a/requirements_SDUEBA010.txt
+++ b/requirements_SDUEBA010.txt
@@ -1,11 +1,13 @@
-gensim==4.3.3
-matplotlib==3.10.0
 numpy==1.24.4
 pandas==1.5.3
 scipy==1.10.1
 scikit-learn==1.3.0
-torch==2.6.0+cu124
+matplotlib==3.10.0
+gensim==4.3.3
 transformers==4.50.3
-ucimlrepo==0.0.7
+torch==2.6.0+cu124
 umap-learn==0.5.3
+ucimlrepo==0.0.7
+jax==0.4.23
+jaxlib==0.4.23
 # tspg is a GitHub repo, not PyPI
